[package]
name = "blockchain-in-rust"
version = "0.1.0"
authors = ["Prettydamcoolt>"]
edition = "2018"

[lib]
name = "blockchainlib"
path = "src/lib.rs"

[[bin]]
name = "blockchain"
path = "src/main.rs"

[dependencies]
hex = "0.3.2"
crypto-hash = "0.3.3"
fuse = "0.3.1" 
libc = "0.2.5" 
os_info = "2.0.8"
os = "0.1.0"